--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -27,5 +27,5 @@ jobs:
         with:
           serverURL: "http://5cd151jqn2:8000/"
           testconfigID: "382edf10-de99-4c2a-abd9-bf6ddcdef474"
-          ClientID: "${{ secrets.clientid }}"
+          ClientID: "3b5db329-0792-4995-86e6-f06fb66687cf"
           Clientsecret: "3gJzKlBXIAniIw8zJRrjujwPnSmIwqDf"
