--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -26,7 +26,6 @@ jobs:
         uses: keysight-eggplant/eggplant-github-action@v1.0.5
         with:
           DryRun: true
-          serverURL: "http://5cd151jqn2:8000/"
+          serverURL: "http://5cd151jqn2:8000"
           testconfigID: "382edf10-de99-4c2a-abd9-bf6ddcdef474"
-          ClientID: "3b5db329-0792-4995-86e6-f06fb66687cf"
           Clientsecret: "3gJzKlBXIAniIw8zJRrjujwPnSmIwqDf"
