--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,28 +1,30 @@
-name: "YOUR WORK FLOW NAME"
+name: Eggplant Runner Build
 
-# Configure which branch that will trigger Eggplant DAI GitHub Action
-# on:
-#  push:
-#    branches:
-#      - main 
-#  pull_request:
-#    branches:
-#      - main
-
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 jobs:
-  Run-DAI-Test-Configuration:
-    strategy: # Optional configuration by using matrix strategy
-      max-parallel: 1 # To set the maximum number of jobs that can run simultaneously 
+  Run-Test-Configuration:
+    strategy:
+      max-parallel: 1
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest] # Operating support by Eggplant DAI GitHub Action
-    runs-on: ${{ matrix.os }} # Provide OS matrix
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
+    name: Run Test Configuration
     steps:
+      - run: echo "Trigger event.. ${{ github.event_name }}. Runner OS.. ${{ runner.os }}."
       - name: Eggplant Runner
-        uses: keysight-eggplant/eggplant-github-action@v1.0.5
+        uses: keysight-eggplant/eggplant-github-action@main
         with:
-          serverURL: "https://eval.dai.eggplant.cloud/controller/runner"
-          testConfigID: "a53e535a-80f3-41e6-9797-8c8f2ba53f1e"
-          Clientsecret: "6GfNG3cFcXQIluNFSMAUDnkLUmUBa4mS"
-          testEnvironmentTimeout: 50
+          dryRun: true
+          serverURL: "http://5cd151jqn2:8000"
+          clientID: "client:dai:api:integration:3b5db329-0792-4995-86e6-f06fb66687cf"
+          testConfigID: "382edf10-de99-4c2a-abd9-bf6ddcdef474" # Test configuration which need to perform execution
+          clientSecret: "3gJzKlBXIAniIw8zJRrjujwPnSmIwqDf" # Eggplant DAI service client secret
+          # Alternatively, DAI client secret can be set as repo secret
+          # by going to GitHub Settings > Secrets > Actions
+          # clientSecret: "${{secrets.DAI_CLIENT_SECRET}}"
