--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [windows-latest]
     runs-on: ${{ matrix.os }}
     name: Run Test Configuration
     steps:
