--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -13,7 +13,7 @@ jobs:
       max-parallel: 1
       matrix:
         os: [windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: self-hosted
     name: Run Test Configuration
     steps:
       - run: |
