--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,23 +1,22 @@
-name: Eggplant Runner Build
+name: Demo
 
+# Controls when the workflow will run
 on:
-  pull_request:
-    branches:
-      - main
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  Run-Test-Configuration:
-    strategy:
-      max-parallel: 1
-      matrix:
-        os: [windows-latest]
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will rrun on
     runs-on: self-hosted
-    name: Run Test Configuration
-    steps:
-      - run: |
-          echo "Trigger event.. ${{ github.event_name }}. Runner OS.. ${{ runner.os }}."
       - name: Eggplant Runner
         uses: keysight-eggplant/eggplant-github-action@main
         with:
