--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -10,20 +10,25 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will rrun on
-    runs-on: self-hosted
+  Run-Test-Configuration:
+    strategy:
+      max-parallel: 1
+      matrix:
+        os: [windows-latest]
+    runs-on: ${{ matrix.os }}
+    name: Run Test Configuration
+    steps:
+      - run: echo "Trigger event.. ${{ github.event_name }}. Runner OS.. ${{ runner.os }}."
       - name: Eggplant Runner
         uses: keysight-eggplant/eggplant-github-action@main
         with:
-          serverURL: "http://5cd151jqn2:8000"
-          clientID: "client:dai:api:integration:3b5db329-0792-4995-86e6-f06fb66687cf"
+          dryRun: true
+          DAI Server URL:  http://5cd151jqn2:8000
+          Client Id: "client:dai:api:integration:3b5db329-0792-4995-86e6-f06fb66687cf"
           testConfigID: "382edf10-de99-4c2a-abd9-bf6ddcdef474" # Test configuration which need to perform execution
-          clientSecret: "3gJzKlBXIAniIw8zJRrjujwPnSmIwqDf" # Eggplant DAI service client secret
+          Client Secret: "3gJzKlBXIAniIw8zJRrjujwPnSmIwqDf" # Eggplant DAI service client secret
           # Alternatively, DAI client secret can be set as repo secret
           # by going to GitHub Settings > Secrets > Actions
           # clientSecret: "${{secrets.DAI_CLIENT_SECRET}}"
