--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - run: echo "Trigger event.. ${{ github.event_name }}. Runner OS.. ${{ runner.os }}."
       - name: Eggplant Runner
-        uses: keysight-eggplant/eggplant-github-action@main
+        uses: keysight-eggplant/eggplant-github-action@v1.0.6
         with:
           dryRun: true
           ServerURL:  http://5cd151jqn2:8000
