--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -25,7 +25,7 @@ jobs:
       - name: "Eggplant Runner"
         uses: keysight-eggplant/eggplant-github-action@v1.0.5
         with:
-          DryRun: true
+          DryRun: false
           serverURL: "http://5cd151jqn2:8000/"
           testconfigID: "382edf10-de99-4c2a-abd9-bf6ddcdef474"
           ClientID: "3b5db329-0792-4995-86e6-f06fb66687cf"
