--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,27 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+name: Eggplant Runner Build
 
-name: Demo
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will rrun on
-    runs-on: windows-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  Run-Test-Configuration:
+    strategy:
+      max-parallel: 1
+      matrix:
+        os: [windows-latest]
+    runs-on: ${{ matrix.os }}
+    name: Run Test Configuration
     steps:
+      - run: echo "Trigger event.. ${{ github.event_name }}. Runner OS.. ${{ runner.os }}."
       - name: Eggplant Runner
         uses: BlandineScott/Demo@main
         with:
